--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-asgiref==3.7.2
+africastalking==1.2.7
+asgiref==3.8.1
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -10,7 +11,7 @@ cryptography==41.0.7
 defusedxml==0.7.1
 dj-database-url==2.1.0
 dj-rest-auth==5.0.2
-Django==4.2.10
+Django==5.1.1
 django-allauth==0.58.2
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.3.1
